# pqcrypto-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PROJECT.md  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  release.yml
benches/: poly_bench.rs
book/: book.toml
book/src/: SUMMARY.md  installation.md  introduction.md  js_wasm.md  ml_dsa.md  ml_kem.md  slh_dsa.md
examples/: basic_usage.rs
playground/: index.html  index.js  style.css
pqcrypto-cli/: Cargo.toml
pqcrypto-cli/examples/: basic_usage.rs
pqcrypto-cli/src/: main.rs
pqcrypto-cli/tests/: kat_tests.rs
pqcrypto-core/: Cargo.toml
pqcrypto-core/src/: lib.rs  ntt.rs  poly.rs  reduce.rs  sampling.rs  sym.rs
pqcrypto-kem/: Cargo.toml
pqcrypto-kem/src/: api.rs  decaps.rs  encaps.rs  keygen.rs  lib.rs
pqcrypto-sign/: Cargo.toml
pqcrypto-sign/src/: api.rs  lib.rs  ml_dsa.rs  slh_dsa.rs
pqcrypto-sign/tests/: mldsa_exhaustion.rs  slh_dsa_stress.rs
pqcrypto-wasm/: Cargo.toml
pqcrypto-wasm/src/: lib.rs
