[workspace]
members = [
    "pqcrypto-core",
    "pqcrypto-kem",
    "pqcrypto-sign",
    "pqcrypto-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Muhammad Omar Faza Al Kautsar (Phantomhase)"]
repository = "https://github.com/PhantomHase/pqcrypto-rs"
description = "Post-Quantum Cryptography library in Rust — ML-KEM-768, ML-DSA-65, SLH-DSA"
keywords = ["post-quantum", "cryptography", "ml-kem", "ml-dsa", "kyber", "dilithium", "nist"]
categories = ["cryptography", "no-std"]

[workspace.dependencies]
# Core dependencies
rand = { version = "0.8", features = ["getrandom"] }
sha3 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
aes = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
cipher = "0.4"
generic-array = "1"
typenum = "1"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
