[package]
name = "pqcrypto-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for post-quantum cryptographic operations"

[[bin]]
name = "pqcrypto"
path = "src/main.rs"

[dependencies]
pqcrypto-core = { path = "../pqcrypto-core" }
pqcrypto-kem = { path = "../pqcrypto-kem" }
pqcrypto-sign = { path = "../pqcrypto-sign" }
rand.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.3"

[lints]
workspace = true
