[package]
name = "pqcrypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core mathematical primitives for post-quantum cryptography"

[dependencies]
rand.workspace = true
sha3.workspace = true
subtle.workspace = true
zeroize.workspace = true
generic-array.workspace = true
typenum.workspace = true

[dependencies.sha2]
workspace = true

[dependencies.hkdf]
workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[lints]
workspace = true
