[package]
name = "pqcrypto-kem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ML-KEM-768 Key Encapsulation Mechanism (FIPS 203)"

[dependencies]
pqcrypto-core = { path = "../pqcrypto-core" }
rand.workspace = true
sha3.workspace = true
subtle.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[lints]
workspace = true
