[package]
name = "pqcrypto-sign"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ML-DSA-65 and SLH-DSA digital signatures (FIPS 204/205)"

[dependencies]
pqcrypto-core = { path = "../pqcrypto-core" }
rand.workspace = true
sha3.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[lints]
workspace = true
